--- a/filter/Makefile
+++ b/filter/Makefile
@@ -37,7 +37,7 @@ CYGWIN_NT-6.3_FF = gfortran
 CYGWIN_NT-6.3_LD = gcc
 
 OBJECTS = \
-	main.o read.o init.o save.o size.o projectors.o norm.o rand.o interpolate.o \
+	main.o read.o init.o save.o projectors.o norm.o rand.o interpolate.o \
 	energy.o coeff.o hamiltonian.o filter.o ortho.o Hmat.o write.o nerror.o \
         dipole.o angular.o pseudopotential.o
 
