--- a/filter/Makefile
+++ b/filter/Makefile
@@ -17,8 +17,8 @@ LIB = $(${OS}_LIB) $(${OS}_CLIB) $(${OS}_FCLIB) $(${OS}_MYLIB)
 
 # flags ...
 #Linux_OPTFLAGS = -fast -qopenmp -static
-Linux_OPTFLAGS = -DMKL_ILP64 -O3 -xSSE3  -qopenmp -static
-#Linux_OPTFLAGS = -O0 -g
+#Linux_OPTFLAGS = -DMKL_ILP64 -O3 -xSSE3  -qopenmp -static
+Linux_OPTFLAGS = -O0 -g
 Linux_CFLAGS = $(${OS}_OPTFLAGS) -DFFT_FFTW -I${HOME}/usr/include -I /opt/rocks/include -I"${MKLROOT}/include" -Wall -pedantic 
 Linux_FFLAGS = $(${OS}_OPTFLAGS)
 
@@ -46,7 +46,7 @@ TESTOBJECTS = \
 	      interpolate.o projectors.o read.o
 
 CUBEOBJECTS = \
-		makecube.o write.o size.o init.o nerror.o read.o save.o interpolate.o rand.o norm.o projectors.o
+		makecube.o write.o size.o init.o nerror.o read.o save.o interpolate.o rand.o norm.o projectors.o vector.o strain.o
 
 POTMATOBJECTS = \
                 pot_mat_elems.o write.o size.o init.o nerror.o read.o save.o interpolate.o rand.o norm.o projectors.o\
