allow vscode to use github

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "cstdlib": "c",
-        "fftw3.h": "c"
+        "fftw3.h": "c",
+        "chrono": "c"
     }
 }
