moved directory to m4868 on Perlmutter

--- a/filter_mpi/Makefile
+++ b/filter_mpi/Makefile
@@ -14,15 +14,21 @@ Linux_CFLAGS = $(Linux_OPTFLAGS) -O3 -qopenmp
 #Linux_CFLAGS = -g -qopenmp -O0
 #Linux_CFLAGS = -g -O0 # uncomment this line to debug/valgrind
 
-MAINNAM = Filter_mpi
+MAINNAM = Filter
 
 # compiler ...
 Linux_CC = cc
 
 OBJECTS = \
 	main.o read.o init.o save.o projectors.o norm.o rand.o interpolate.o strain.o \
-	energy.o coeff.o hamiltonian.o filter.o ortho.o Hmat.o write.o nerror.o \
+	energy.o coeff.o hamiltonian.o ortho.o Hmat.o write.o nerror.o \
 	vector.o dipole.o angular.o pseudopotential.o aux.o phamiltonian.o
+
+OMP = $(OBJECTS) filter_omp.o
+
+FAST = $(OBJECTS) filter_fast.o
+
+MPI = $(OBJECTS) filter_mpi.o
 
 CUBEOBJECTS = \
 	makecube.o write.o size.o init.o nerror.o read.o save.o interpolate.o rand.o norm.o projectors.o vector.o strain.o
@@ -33,8 +39,14 @@ CUBEOBJECTS = \
 	$(Linux_CC) -DOS_$(OS) $(Linux_CFLAGS) -c $*.c  
 
 # Compile the main executable Filter.x and link libraries
-$(MAINNAM): $(OBJECTS) 
-	$(Linux_CC) -o $(MAINNAM).x $(OBJECTS) $(LIB)
+$(MAINNAM): $(OMP)
+	$(Linux_CC) -o $(MAINNAM).x $(OMP) $(LIB)
+
+mpi: $(MPI)
+	$(Linux_CC) -o $(MAINNAM)_mpi.x $(MPI) $(LIB)
+
+fast: $(FAST)
+	$(Linux_CC) -o $(MAINNAM)_fast.x $(FAST) $(LIB)
 
 # If desired, run make cube to build the makecube.x executable
 cube: $(CUBEOBJECTS)
