fully functional MPI filter!

--- a/periodic_filter/Makefile
+++ b/periodic_filter/Makefile
@@ -10,19 +10,19 @@ LIB = $(Linux_DYLIB) $(Linux_LIB)
 
 # flags ...
 Linux_OPTFLAGS = -DMKL_ILP64
-Linux_CFLAGS = $(Linux_OPTFLAGS) -O3 -xSSE3 -qopenmp -static
+Linux_CFLAGS = $(Linux_OPTFLAGS) -O3 -qopenmp
 #Linux_CFLAGS = -g -qopenmp -O0
 #Linux_CFLAGS = -g -O0 # uncomment this line to debug/valgrind
 
 MAINNAM = Filter
 
 # compiler ...
-Linux_CC = icx
+Linux_CC = cc
 
 OBJECTS = \
 	main.o read.o init.o save.o projectors.o norm.o rand.o interpolate.o strain.o \
-	energy.o coeff.o hamiltonian.o ortho.o Hmat.o write.o nerror.o \
-	vector.o dipole.o angular.o pseudopotential.o aux.o phamiltonian.o
+	energy.o coeff.o hamiltonian.o ortho.o Hmat.o write.o nerror.o periocic.o\
+	vector.o dipole.o angular.o pseudopotential.o aux.o phamiltonian.o ghaltonian.o
 
 OMP = $(OBJECTS) filter_omp.o
 
