--- a/filter_mpi/Makefile
+++ b/filter_mpi/Makefile
@@ -12,7 +12,7 @@ LIB = $(Linux_DYLIB) $(Linux_LIB)
 Linux_OPTFLAGS = -DMKL_ILP64
 Linux_CFLAGS = $(Linux_OPTFLAGS) -O3 -qopenmp
 #Linux_CFLAGS = -g -qopenmp -O0
-Linux_CFLAGS = -g -O0 # uncomment this line to debug/valgrind
+#Linux_CFLAGS = -g -O0 # uncomment this line to debug/valgrind
 
 MAINNAM = Filter
 
