added MPI parallelization over kernel to BSE

--- a/filter_mpi/Makefile
+++ b/filter_mpi/Makefile
@@ -10,23 +10,20 @@ LIB = $(Linux_DYLIB) $(Linux_LIB)
 
 # flags ...
 Linux_OPTFLAGS = -DMKL_ILP64
-Linux_CFLAGS = $(Linux_OPTFLAGS) -O3 -qopenmp -Wall
-#Linux_CFLAGS = $(Linux_OPTFLAGS) -O3 -qopenmp
+Linux_CFLAGS = $(Linux_OPTFLAGS) -O3 -qopenmp -msse4 -Wall
 #Linux_CFLAGS = -g -qopenmp -O0 -Wall
-Linux_CFLAGS = -g -Wno-language-extension-token -O0 -Wall # uncomment this line to debug/valgrind
+#Linux_CFLAGS = -g -O0 -Wall # uncomment this line to debug/valgrind
 
 MAINNAM = Filter
 
 # compiler ...
-Linux_CC = icx
+Linux_CC = cc
 
 OBJECTS = \
 	main.o mod_init.o mod_mem.o mod_pot.o mod_filter.o mod_ortho.o mod_diag.o mod_output.o\
 	read.o init.o save.o projectors.o norm.o rand.o interpolate.o strain.o coeff.o \
-	energy.o hamiltonian.o ortho.o Hmat.o write.o nerror.o integral.o phamiltonian.o \
+	energy.o hamiltonian.o filter.o ortho.o Hmat.o write.o nerror.o integral.o phamiltonian.o \
 	vector.o aux.o init_periodic.o
-
-FAST = $(OBJECTS) filter_fast.o
 
 CUBEOBJECTS = \
 	makecube.o write.o size.o init.o nerror.o read.o save.o interpolate.o rand.o norm.o projectors.o vector.o strain.o
@@ -37,11 +34,8 @@ CUBEOBJECTS = \
 	$(Linux_CC) -DOS_$(OS) $(Linux_CFLAGS) -c $*.c  
 
 # Compile the main executable Filter.x and link libraries
-$(MAINNAM): $(FAST)
-	$(Linux_CC) -o $(MAINNAM)_mpi.x $(OMP) $(LIB)
-
-$(MAINNAM): $(FAST)
-	$(Linux_CC) -o $(MAINNAM)_mpi.x $(FAST) $(LIB)
+$(MAINNAM): $(OBJECTS)
+	$(Linux_CC) -o $(MAINNAM)_mpi.x $(OBJECTS) $(LIB)
 
 
 # If desired, run make cube to build the makecube.x executable
