--- a/periodic_filter/Makefile
+++ b/periodic_filter/Makefile
@@ -10,9 +10,10 @@ LIB = $(Linux_DYLIB) $(Linux_LIB)
 
 # flags ...
 Linux_OPTFLAGS = -DMKL_ILP64
-Linux_CFLAGS = $(Linux_OPTFLAGS) -O3 -qopenmp
-#Linux_CFLAGS = -g -qopenmp -O0
-#Linux_CFLAGS = -g -O0 # uncomment this line to debug/valgrind
+#Linux_CFLAGS = $(Linux_OPTFLAGS) -O3 -qopenmp -msse4 -Wall
+#Linux_CFLAGS = $(Linux_OPTFLAGS) -O3 -qopenmp
+#Linux_CFLAGS = -g -qopenmp -O0 -Wall
+Linux_CFLAGS = -g -O0  # uncomment this line to debug/valgrind
 
 MAINNAM = Filter
 
@@ -20,20 +21,13 @@ MAINNAM = Filter
 Linux_CC = cc
 
 OBJECTS = \
-	main.o read.o init.o save.o projectors.o norm.o rand.o interpolate.o strain.o \
-	energy.o coeff.o hamiltonian.o ortho.o Hmat.o write.o nerror.o periodic.o\
-	vector.o dipole.o angular.o pseudopotential.o aux.o phamiltonian.o ghamiltonian.o
-
-OMP = $(OBJECTS) filter_omp.o
-
-FAST = $(OBJECTS) filter_fast.o
-
-MPI = $(OBJECTS) filter_mpi.o
-
-PERIODIC = $(OBJECTS) filter_omp.o
+	main.o mod_init.o mod_mem.o mod_pot.o mod_filter.o mod_ortho.o mod_diag.o mod_output.o\
+	read.o init.o save.o projectors.o norm.o rand.o interpolate.o strain.o coeff.o \
+	energy.o hamiltonian.o filter.o ortho.o Hmat.o write.o nerror.o phamiltonian.o \
+	vector.o aux.o init_periodic.o ghamiltonian.o
 
 CUBEOBJECTS = \
-	makecube.o write.o init.o nerror.o read.o save.o interpolate.o rand.o norm.o projectors.o vector.o strain.o
+	makecube.o write.o size.o init.o nerror.o read.o save.o interpolate.o rand.o norm.o projectors.o vector.o strain.o
 
 # compilation ...
 # compilation rule for all .c files
@@ -41,17 +35,9 @@ CUBEOBJECTS = \
 	$(Linux_CC) -DOS_$(OS) $(Linux_CFLAGS) -c $*.c  
 
 # Compile the main executable Filter.x and link libraries
-$(MAINNAM): $(PERIODIC)
-	$(Linux_CC) -o $(MAINNAM)_periodic.x $(PERIODIC) $(LIB)
+$(MAINNAM): $(OBJECTS)
+	$(Linux_CC) -o $(MAINNAM)_periodic.x $(OBJECTS) $(LIB)
 
-mpi: $(MPI)
-	$(Linux_CC) -o $(MAINNAM)_mpi.x $(MPI) $(LIB)
-
-fast: $(FAST)
-	$(Linux_CC) -o $(MAINNAM)_fast.x $(FAST) $(LIB)
-
-omp: $(OMP)
-	$(Linux_CC) -o $(MAINNAM).x $(OMP) $(LIB)
 
 # If desired, run make cube to build the makecube.x executable
 cube: $(CUBEOBJECTS)
