--- a/bse/Makefile
+++ b/bse/Makefile
@@ -10,9 +10,9 @@ LIB = $(Linux_DYLIB) $(Linux_LIB)
 
 # flags ...
 Linux_OPTFLAGS = -DMKL_ILP64
-Linux_CFLAGS = $(Linux_OPTFLAGS) -O3 -qopenmp
+#Linux_CFLAGS = $(Linux_OPTFLAGS) -O3 -qopenmp -msse4
 #Linux_CFLAGS = -g -qopenmp -O0
-#Linux_CFLAGS = -g -O0 # uncomment this line to debug/valgrind
+Linux_CFLAGS = -g -O0 # uncomment this line to debug/valgrind
 
 MAINNAM = BSE
 
