--- a/filter_mpi/Makefile
+++ b/filter_mpi/Makefile
@@ -9,7 +9,7 @@ Linux_DYLIB = -lmkl_intel_ilp64 -lmkl_lapack95_ilp64 -lmkl_blas95_ilp64 -lmkl_in
 LIB = $(Linux_DYLIB) $(Linux_LIB)
 
 # flags ...
-Linux_OPTFLAGS = -DMKL_ILP64
+Linux_OPTFLAGS = -DMKL_ILP64 -DFFTW_FFT
 Linux_CFLAGS = $(Linux_OPTFLAGS) -O3 -qopenmp -msse4 -Wall
 #Linux_CFLAGS = -g -qopenmp -O0 -Wall
 #Linux_CFLAGS = -g -O0 -Wall # uncomment this line to debug/valgrind
