conversion to double psis done. working version. no double mats yet

--- a/bse_gpu/Makefile
+++ b/bse_gpu/Makefile
@@ -10,9 +10,9 @@ LIB = $(Linux_DYLIB) $(Linux_LIB)
 
 # flags ...
 Linux_OPTFLAGS = -DMKL_ILP64 -DFFTW_FFT
-#Linux_CFLAGS = $(Linux_OPTFLAGS) -O3 -msse4 -g -Minfo=accel -gpu=debug -traceback -lineinfo -mp=gpu -gpu=cc80 -fast -lnvToolsExt
+Linux_CFLAGS = $(Linux_OPTFLAGS) -O3 -msse4 -g -Minfo=accel -gpu=debug -traceback -lineinfo -mp=gpu -gpu=cc80 -fast -lnvToolsExt
 #Linux_CFLAGS = -g -qopenmp -O0
-Linux_CFLAGS = -g -O0 # uncomment this line to debug/valgrind
+#Linux_CFLAGS = -g -O0 # uncomment this line to debug/valgrind
 
 MAINNAM = BSE
 
@@ -21,7 +21,7 @@ Linux_CC = cc
 
 # obhect files
 OBJECTS = \
-	main.o mod_init.o spin.o mod_pot.o mod_dipole.o write.o save.o read.o basis.o init.o dipole.o coulomb.o\
+	main.o mod_init.o spin.o mod_pot.o mod_dipole.o mod_kernel.o write.o save.o read.o basis.o init.o dipole.o coulomb.o\
 	hartree.o angular.o bethe-salpeter.o diag.o optical.o aux.o
 
 # compilation ...
