--- a/bse_cplx/Makefile_nv
+++ b/bse_cplx/Makefile_nv
@@ -3,14 +3,19 @@ SHELL = /bin/sh
 OS=Linux
 
 # libraries ...
-Linux_LIB = -qmkl -qopenmp -lpthread -lfftw3 -lfftw3_threads -lfftw3_omp
-Linux_DYLIB = -lmkl_intel_ilp64 -lmkl_lapack95_ilp64 -lmkl_blas95_ilp64 -lmkl_intel_thread -lmkl_core -lm
+FFTW_PREFIX = $(CRAY_FFTW_PREFIX)/x86_64
+Linux_LIB = -lpthread -L$(FFTW_PREFIX)/lib/ -lfftw3 -lfftw3_threads -lfftw3_omp -L$(CRAY_LIBSCI_PREFIX_DIR)/lib -lsci_nvidia
+Linux_DYLIB = -lm
+FFTW_INCLUDE = -I$(CRAY_FFTW_PREFIX)/x86_64/include/
 
 LIB = $(Linux_DYLIB) $(Linux_LIB)
 
 # flags ...
-Linux_OPTFLAGS = -O3 -DMKL_ILP64 -DFFTW_FFT -mavx2
-Linux_CFLAGS = $(Linux_OPTFLAGS) -qopenmp -g
+FFT_FLAGS = -I$(CRAY_FFTW_PREFIX)/x86_64/include
+
+Linux_OPTFLAGS = -DMKL_ILP64 -DFFTW_FFT -Mvect=simd -march=native -Minfo=all
+#Linux_CFLAGS = $(Linux_OPTFLAGS) -O3 -g -Minfo=loop,vect -mp -fast -lnvToolsExt $(FFT_FLAGS)
+Linux_CFLAGS = $(Linux_OPTFLAGS) -O3 -mp -fast -lnvToolsExt
 #Linux_CFLAGS = -g -qopenmp -O0
 #Linux_CFLAGS = -g -O0 # uncomment this line to debug/valgrind
 
@@ -36,7 +41,7 @@ OBJECTS = \
 
 # Compile the main executable BSE.x and link libraries
 $(MAINNAM): $(OBJECTS) 
-	$(Linux_CC) -o $(MAINNAM).x $(OBJECTS) $(LIB)
+	$(Linux_CC) -o $(MAINNAM).x $(OBJECTS) $(LIB) -lnvToolsExt $(FFTW_INCLUDE)
 
 clean:
 	/bin/rm *.o *.x
