--- a/filter_mpi/Makefile
+++ b/filter_mpi/Makefile
@@ -11,8 +11,8 @@ LIB = $(Linux_DYLIB) $(Linux_LIB)
 # flags ...
 Linux_OPTFLAGS = -DMKL_ILP64
 #Linux_CFLAGS = $(Linux_OPTFLAGS) -O3 -qopenmp
-Linux_CFLAGS = -g -qopenmp -O0 -Wall
-#Linux_CFLAGS = -g -O0 -Wall # uncomment this line to debug/valgrind
+#Linux_CFLAGS = -g -qopenmp -O0 -Wall
+Linux_CFLAGS = -g -O0 -Wall # uncomment this line to debug/valgrind
 
 MAINNAM = Filter
 
