--- a/bse_cplx/Makefile
+++ b/bse_cplx/Makefile
@@ -11,9 +11,9 @@ LIB = $(Linux_DYLIB) $(Linux_LIB)
 # flags ...
 Linux_OPTFLAGS = -O3 -DMKL_ILP64 -DFFTW_FFT -mavx2
 Linux_CFLAGS = $(Linux_OPTFLAGS) -qopenmp
-Linux_CFLAGS = -g -O0 # uncomment this line to debug/valgrind
+#Linux_CFLAGS = -g -O0 # uncomment this line to debug/valgrind
 
-MAINNAM = BSE
+MAINNAM = bse_cplx
 
 # compiler ...
 Linux_CC = cc
